# localisation

./: .gitignore  CMakeLists.txt  Makefile  README.md  objective.md  style.md  todo.md  todo2.md
include/: controller.h  feature_extractor.h  geometry.h  models.h  point_cloud.h  render_objects.h  render_utils.h  renderer.h  robot.h  sensor.h  sim.h  state.h  state_estimator.h  step.h  terrain.h
include/algorithm/: controller.h  feature_detector.h  feature_matcher.h  features_matcher.h  gaussian_methods.h  gaussian_mixture_model.h  kalman_filter.h  map.h  odometry.h  state_estimate.h  state_estimator.h
include/data/: point_cloud.h
include/maths/: feature_model.h  geometry.h  measurement_model.h  models.h  motion_model.h  odometry.h  point_cloud.h  probability.h  state_estimate.h
include/state/: robot.h  sensor.h  sim.h  state.h  terrain.h
include/utils/: multistep.h  render_utils.h  renderer.h  step.h
src/: geometry.cpp  main.cpp  point_cloud.cpp  render_objects.cpp  render_utils.cpp  renderer.cpp  robot.cpp  sensor.cpp  terrain.cpp
src/algorithm/state_estimator/: ekf.cpp  hmm.cpp  mht.cpp
src/maths/: geometry.cpp  motion_model.cpp  odometry.cpp  probability.cpp
src/state/: terrain.cpp
src/utils/: render_utils.cpp  renderer.cpp
